After refactoring of code